--- a/AudioSignalApp/AudioSignalApp.Android/AudioSignalApp.Android.csproj
+++ b/AudioSignalApp/AudioSignalApp.Android/AudioSignalApp.Android.csproj
@@ -85,7 +85,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AudioSignalApp\AudioSignalApp.csproj">
       <Project>{8237F870-36BD-4E0F-8483-4DF4FC1F5812}</Project>
